[tool.poetry]
name = "exchange"
version = "0.1.0"
description = ""
authors = ["akalinin <am1kalinin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
sqlalchemy-utils = "^0.41.2"
celery = {extras = ["redis"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
